--- a/home.html
+++ b/home.html
@@ -16,7 +16,7 @@
             <div class="nav-links" id="navlinks">
                 <i class="fa fa-window-close-o" onclick="hideMenu"></i>
                 <ul>
-                    <li><a href="home.html">HOME</a></li>
+                    <li><a href="index.html">HOME</a></li>
                     <li><a href="about.html">ABOUT</a></li>
                     <li><a href="design.html">DESIGN</a></li>
                     <li><a href="awards.html">AWARDS</a></li>
